--- a/back/docker-compose.yml
+++ b/back/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   mysql:
     image: mysql:8
-    container_name: mysql_container
+    container_name: mysql_node_app_container
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
@@ -14,6 +14,29 @@ services:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+      - ./db.sql:/docker-entrypoint-initdb.d/db.sql
+    entrypoint: /bin/bash -c "chmod +x /docker-entrypoint-initdb.d/db.sql && /usr/local/bin/docker-entrypoint.sh mysqld"
+
+  my-node-app:
+    image: ghcr.io/kelysaina/ges-appart/my-node-app:latest
+    container_name: my_node_app_container
+    restart: always
+    environment:
+      - NODE_ENV=production
+      - MYSQL_HOST=mysql
+      - MYSQL_DATABASE=mydatabase
+      - MYSQL_USER=myuser
+      - MYSQL_PASSWORD=mypassword
+    ports:
+      - "3000:3000"
+    depends_on:
+      - mysql
+    entrypoint:
+      [
+        "/bin/bash",
+        "-c",
+        "until nc -z mysql 3306; do echo 'Waiting for MySQL...'; sleep 2; done; npm run dev",
+      ]
 
 volumes:
   mysql_data:
