--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/runtime": "^7.20.6",
     "@react-navigation/native": "^7.0.18",
     "@react-navigation/stack": "^7.2.2",
     "axios": "^1.8.4",
@@ -17,16 +18,17 @@
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "^5.3.0",
-    "tailwind-rn": "^4.2.0",
-    "tailwindcss": "^4.0.15"
+    "react-native-svg": "^15.11.2",
+    "react-native-vector-icons": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-transform-private-methods": "^7.25.9",
-    "@tailwindcss/postcss": "^4.0.15",
     "metro-react-native-babel-preset": "^0.77.0",
     "postcss": "^8.5.3"
   },
